src/main/java/com/example/gateway/global/error/exception/TokenValidException.java
package com.example.gateway.global.error.exception;

public class TokenValidException extends RuntimeException {
    public TokenValidException(String msg) {
        super(msg);
    }
}
